welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: type mismatch;
 found   : Unit
 required: Boolean
  while(fini())
            ^SnakeBuggle:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^SnakeBuggle:10: warning: enclosing method fini has result type Unit: return value discarded
    return true
    ^SnakeBuggle:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:14: warning: enclosing method fini has result type Unit: return value discarded
  return false
  ^