welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  while(fini())
    serpute()
}

def fini(){
  if (estFaceMur()==true){
    gauche()
    if (estFaceMur()==true){
    return true
    }
    droite()
  }
  return false
}

def serpute(){
  avance(6)
  if (getDirection()==Direction.EST){
    gauche()
    avance()
    gauche()
  }else if (getDirection()==Direction.OUEST){
    droite()
    avance()
    droite()
  }
}